--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         .header {
-            background-image: url("../images/darklaptop.jpg");
+            background-image: url("./images/darklaptop.jpg");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -87,7 +87,7 @@
         }
 
         .community {
-            background-image: url(../images/office.jpg);
+            background-image: url(./images/office.jpg);
             height: 400px;
             background-size: cover;
             background-repeat: no-repeat;
@@ -306,7 +306,7 @@
                                                 blanditiis ad tenetur distinctio, nihil provident.</p>
                                         </div>
                                         <div class="col">
-                                            <img src="../images/man.jpg" class="img" alt="">
+                                            <img src="./images/man.jpg" class="img" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -324,7 +324,7 @@
                                                 blanditiis ad tenetur distinctio, nihil provident.</p>
                                         </div>
                                         <div class="col">
-                                            <img src="../images/man.jpg" class="img" alt="">
+                                            <img src="./images/man.jpg" class="img" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -342,7 +342,7 @@
                                                 blanditiis ad tenetur distinctio, nihil provident.</p>
                                         </div>
                                         <div class="col">
-                                            <img src="../images/man.jpg" class="img" alt="">
+                                            <img src="./images/man.jpg" class="img" alt="">
                                         </div>
                                     </div>
                                 </div>
